# FastDTW_CPP

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
cmake/: FindSpatialIndex.cmake
include/: dtw.hpp
include/dtw_c/: dtw_c.h
include/fastdtw_cpp/: distances.h  distances.hpp  downsampling.h  downsampling.hpp  dtw.h  dtw.hpp  fastdtw.h  fastdtw.hpp  mask.h  mask.hpp  path.h  path.hpp  projection.h  projection.hpp  projection_idc.h  projection_idc.hpp  utils.h  utils.hpp
include/lbimproved/: dtw.h  querystrategy.h  rtreebased.h
include/ucr_dtw/: ucr_dtw.h
src/: distances.cpp  downsampling.cpp  dtw.cpp  fastdtw.cpp  fastdtw_cpp.cpp  mask.cpp  opencv.cpp  path.cpp  path_visual.cpp  projection_idc.cpp  utils.cpp
src/dtw_c/: dtw_c.c
src/examples/: examples.cpp
src/fastdtw_cpp/: distances.cpp  dtw.cpp  fastdtw.cpp  path.cpp  projection.cpp  projection_idc.cpp  utils.cpp
src/ucr_dtw/: deque.c  test.c  ucr_dtw.c
