<?xml version="1.0"?>
<package>
  <name>fastdtw_cpp</name>
  <version>0.9.0</version>
  <description>
    FastDTW (fast dynamic time warping) template library for C++ programs.
    Based on the publication:
        "FastDTW: Toward Accurate Dynamic Time Warping in Linear Time and Space -
                  Stand Salvador,Philip Chan"
  </description>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
